--- a/src/components/brand/brand.css
+++ b/src/components/brand/brand.css
@@ -9,4 +9,8 @@
     flex: 1;
     max-width: 150px;
     min-width: 120px;
+    margin: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
