--- a/src/components/article/article.css
+++ b/src/components/article/article.css
@@ -12,14 +12,13 @@
     height: 100%;
     background: red;
     cursor: pointer;
+    overflow: hidden;
 }
 
  .gpt3__blog-container_article-image img {
     width: 100%;
     height: 100%;
-    
-    object-fit: cover;
-   
+    object-fit: cover; 
 }
 
 
