--- a/src/components/article/article.css
+++ b/src/components/article/article.css
@@ -1,5 +1,5 @@
 .gpt3__blog-container_article {
-    width: 100%;
+   /* width: 100%; */
     height: 100%;
 
     display: flex;
@@ -8,9 +8,9 @@
 }
 
 .gpt3__blog-container_article-image {
-    width: 100%;
+    /*width: 100%;*/
     height: 100%;
-    background: red;
+    background: var(--color-bg);
     cursor: pointer;
     overflow: hidden;
 }
@@ -42,12 +42,12 @@
 
 .gpt3__blog-container_article-content h3 {
     font-family: var(--font-family);
-    font-size: 25.11px;
+    font-size: 18px;
     font-weight: 800;
     line-height: 30.30px;
     
     color: #fff;
-    margin-bottom: 5rem;
+    margin-bottom: 3rem;
     cursor: pointer;
 }
 
