--- a/src/components/article/article.css
+++ b/src/components/article/article.css
@@ -9,10 +9,10 @@
 
 .gpt3__blog-container_article-image {
     /*width: 100%;*/
-    height: 100%;
+    /*height: 100%;*/
     background: var(--color-bg);
     cursor: pointer;
-    overflow: hidden;
+    /*overflow: hidden;*/
 }
 
  .gpt3__blog-container_article-image img {
